--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -8,6 +8,23 @@ A real parser *should* improve in several main areas:
 * Performance: This example is slow in the extreme compared to simpler parsing methods, a real parser should be performant.
 * Error reporting: Even the best written parser is a complete pain if it doesn't have intelligent error reporting.
 
+=== Usage and Examples
+
+The parser takes a string like this:
+
+  (this is (the number 1 ("example s-expression")))
+  
+and turns it into a structured array that represents the input data:
+
+  [:this, :is, [:the, :number, 1, ["example s-expression"]]]
+  
+To use the parser simply call the parse() method and supply a string:
+
+  example = '(s-expression 1)'
+  
+  ast = Parser.parse(example)
+  # => [:s-expression, 1]
+
 === The Core Grammar
 
 For easy reference the core grammar of the parser is reproduced here:
